// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RelatedArticles renders first three related articles 1`] = `
<div>
  <div
    class="container-fluid max-width-1100 my-6 px-3"
  >
    <div
      class="row"
    >
      <div
        class="col"
      >
        <h3
          class="text-dark align-self-start"
        >
          Related Articles
        </h3>
      </div>
      <div
        class="col text-right"
      >
        <a
          class="text-dark align-self-end"
          href="/articles"
        >
          See More
        </a>
      </div>
    </div>
    <div
      class="row"
    >
      <a
        class="col-12 col-md-4 py-1 pr-1 text-white"
        href="/articles/article-1"
      >
        <div
          class="embed-responsive embed-responsive-1by1 rounded "
        >
          <div
            class="fill d-flex justify-content-center align-items-center"
          >
            <div
              class="spinner-border text-primary"
              role="status"
            >
              <span
                class="sr-only"
              >
                Loading...
              </span>
            </div>
          </div>
          <div
            class="fill d-flex justify-content-center align-items-center"
          >
            <div
              class="w-100 h-100 p-3 d-flex flex-row align-items-end"
              style="z-index: 2;"
            >
              <div>
                <h3>
                  Article 1
                </h3>
              </div>
            </div>
            <div
              class="p-absolute w-100 h-100"
              style="top: 0px; left: 0px; overflow: hidden; background: rgba(0, 0, 0, 0.4); z-index: 0;"
            />
          </div>
        </div>
      </a>
      <a
        class="col-12 col-md-4 py-1 pr-1 text-white"
        href="/articles/article-1"
      >
        <div
          class="embed-responsive embed-responsive-1by1 rounded "
        >
          <div
            class="fill d-flex justify-content-center align-items-center"
          >
            <div
              class="spinner-border text-primary"
              role="status"
            >
              <span
                class="sr-only"
              >
                Loading...
              </span>
            </div>
          </div>
          <div
            class="fill d-flex justify-content-center align-items-center"
          >
            <div
              class="w-100 h-100 p-3 d-flex flex-row align-items-end"
              style="z-index: 2;"
            >
              <div>
                <h3>
                  Article 1
                </h3>
              </div>
            </div>
            <div
              class="p-absolute w-100 h-100"
              style="top: 0px; left: 0px; overflow: hidden; background: rgba(0, 0, 0, 0.4); z-index: 0;"
            />
          </div>
        </div>
      </a>
      <a
        class="col-12 col-md-4 py-1 pl-1 text-white"
        href="/articles/article-1"
      >
        <div
          class="embed-responsive embed-responsive-1by1 rounded "
        >
          <div
            class="fill d-flex justify-content-center align-items-center"
          >
            <div
              class="spinner-border text-primary"
              role="status"
            >
              <span
                class="sr-only"
              >
                Loading...
              </span>
            </div>
          </div>
          <div
            class="fill d-flex justify-content-center align-items-center"
          >
            <div
              class="w-100 h-100 p-3 d-flex flex-row align-items-end"
              style="z-index: 2;"
            >
              <div>
                <h3>
                  Article 1
                </h3>
              </div>
            </div>
            <div
              class="p-absolute w-100 h-100"
              style="top: 0px; left: 0px; overflow: hidden; background: rgba(0, 0, 0, 0.4); z-index: 0;"
            />
          </div>
        </div>
      </a>
    </div>
  </div>
</div>
`;

exports[`RelatedArticles renders the error state 1`] = `<div />`;

exports[`RelatedArticles renders the first three articles when no related articles are found 1`] = `<div />`;

exports[`RelatedArticles renders the loading state 1`] = `
<div>
  <div
    class="fill d-flex justify-content-center align-items-center"
  >
    <div
      class="spinner-border text-primary"
      role="status"
    >
      <span
        class="sr-only"
      >
        Loading...
      </span>
    </div>
  </div>
</div>
`;
